--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animated Navigation</title>
+  <title>Navigation Nation</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Menu Overlay -->
-  <div class="overlay overlay-slide-left" id="overlay">
-    <!-- Menu Items -->
+  <div class="overlay" id="overlay">
+    <!-- Menu Overlay -->
     <nav>
       <ul>
-        <li id="nav-1" class="slide-out-1"><a href="#">Home</a></li>
-        <li id="nav-2" class="slide-out-2"><a href="#about">About</a></li>
-        <li id="nav-3" class="slide-out-3"><a href="#skills">Skills</a></li>
-        <li id="nav-4" class="slide-out-4"><a href="#projects">Projects</a></li>
-        <li id="nav-5" class="slide-out-5"><a href="#contact">Contact</a></li>
+        <li id="nav-1"><a href="#home">Home</a></li>
+        <li id="nav-1"><a href="#about">About</a></li>
+        <li id="nav-1"><a href="#skills">Skills</a></li>
+        <li id="nav-1"><a href="#projects">Projects</a></li>
+        <li id="nav-1"><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </div>
+  
   <!-- Menu Bars -->
   <div class="menu-bars" id="menu-bars">
     <div class="bar1"></div>
